tests/paczka1/small_fuzzy/37107027.err
Error in line 4: S670 Ay74 24,5
Error in line 3: oiG S896 86,9
Error in line 11: 0CJfwmo A874 4,9
